examples/keycloak/ingress.template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
spec:
  rules:
    # provide the actual Ingress for `host` value:
    # use the following command to get the subdomain:
    #    ibmcloud ks cluster get --cluster <cluster-name> | grep Ingress
    # any prefix can be added (e.g.):
    #  host: tsi-keycloak.tsi-fra-8abee0d19746a818fd9d58aa25c34ecfe-0000.eu-de.containers.appdomain.cloud
  - host:
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tsi-keycloak
            port:
              # number: 9090
              number: 8080
